# project_epione

./: .gitignore  Cargo.toml  Readme.md  Rocket.toml  mono.code-workspace
data/: epione_zsnark.params  zksnark_params.params
data/debug/: params_a.txt  params_b_g1.txt  params_b_g2.txt  params_h.txt  params_l.txt  vk_alpha_g1.txt  vk_beta_g1.txt  vk_beta_g2.txt  vk_delta_g1.txt  vk_delta_g2.txt  vk_gamma_g2.txt  vk_ic.txt
migrations/2023-08-26-042733_create_users/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/auth/: mod.rs  register.rs
src/auth/zk_snark/: mod.rs
src/auth/zk_snarks/: mimc_hash.rs  mod.rs  registration_circuit.rs  snark_ops.rs  snark_setup.rs  verifiers.rs
src/controllers/: auth_controller.rs
src/services/: connection.rs
