[package]
name = "project_epione"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="=0.5.0-rc.3", features = ["json", "mtls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15"