[package]
name = "project_epione"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="=0.5.0-rc.3", features = ["json", "mtls"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
diesel = { version = "2.1.1", features = ["postgres", "r2d2", "uuid"] }
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
log = "0.4.20"
env_logger = "0.10.0"
dotenvy = "0.15.7"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
rust_srp = "0.1.8"
